# qt-homeworks-02

./: CMakeLists.txt  main.cpp
